src/test/valid/custom/impParamDeclare.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(x) is
    int i = x ;
    return 0 
  end
  println 0
end
